Fix cropped h1 on the right

--- a/src/assets/css/base/typography.css
+++ b/src/assets/css/base/typography.css
@@ -28,6 +28,7 @@ h2,
 h1,
 .h1 {
   padding-bottom: 0.2em;
+  padding-right: 0.1em;
 
   font-size: 2.5em;
   font-weight: 800;
